# piper-tts-rs

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: simple.rs  simple_native.rs
piper-tts-rs/: Cargo.toml
piper-tts-rs-sys/: Cargo.toml  README.md  build.rs  wrapper.h  wrapper_cuda.h
piper-tts-rs-sys/libpiper-cuda/: .gitignore  CMakeLists.txt  README.md
piper-tts-rs-sys/libpiper-cuda/include/: piper.h
piper-tts-rs-sys/libpiper-cuda/src/: piper.cpp
piper-tts-rs-sys/src/: bindings.rs  bindings_cuda.rs  cuda.rs  lib.rs
piper-tts-rs/src/: lib.rs
src/: main.rs
tests/: piper_safe_test.rs
