[package]
name = "piper-tts-rs-sys"
version = "0.1.2"
edition = "2024"
authors = ["Pulatov Kamran"]
description = "Piper-TTS raw implementation in Rust"
license-file = "../COPYRIGHT.md"

[dependencies]

[features]
default = ["cpu"]
cuda = []
cpu = []

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.51"
cmake = "0.1"
find_cuda_helper = "0.2.0"
